crates/mockql-core/src/graphql/snapshots/operation_field_filter/different_levels/mockql_core__graphql__operation_field_filter__tests__exclude_fields@different_levels__nested.graphql.snap
---
source: crates/mockql-core/src/graphql/operation_field_filter/mod.rs
input_file: crates/mockql-core/src/graphql/snapshots/operation_field_filter/different_levels/nested.graphql
---
{
  recommendedProducts {
    upc
    name
  }
}
